projects/podinfo-private/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podinfo-private
  namespace: projects
spec:
  replicas: 1
  selector:
    matchLabels:
      app: podinfo-private
  template:
    metadata:
      labels:
        app: podinfo-private
    spec:
      nodeSelector:
        location: edge
      tolerations:
        - key: location
          operator: Equal
          value: edge
          effect: NoSchedule
      containers:
        - name: podinfo
          image: ghcr.io/stefanprodan/podinfo:6.7.1
          ports:
            - containerPort: 9898
          resources:
            requests:
              cpu: "10m"
              memory: "32Mi"
            limits:
              cpu: "100m"
              memory: "64Mi"
