projects/podinfo-private/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo-private
  namespace: projects
spec:
  ingressClassName: traefik
  rules:
    - host: private.stoneforge.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: podinfo-private
                port:
                  number: 9898
